[gd_scene load_steps=2 format=2]

[ext_resource path="res://ObjectsTree.gd" type="Script" id=1]

[node name="ObjectTree" type="Control"]
anchor_bottom = 1.0
margin_left = 0.263519
margin_right = 258.264
script = ExtResource( 1 )

[node name="Tree" type="Tree" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_rmb_select = true

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 61.0
margin_top = 70.0
margin_right = 220.0
margin_bottom = 123.0

[node name="WindowDialog" type="WindowDialog" parent="."]
margin_right = 310.0
margin_bottom = 142.0
popup_exclusive = true
window_title = "Change node's text"

[node name="LineEdit" type="LineEdit" parent="WindowDialog"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -40.0
margin_right = -40.0
margin_bottom = -15.8679
max_length = 20

[node name="Button" type="Button" parent="WindowDialog"]
margin_left = 124.415
margin_top = 91.736
margin_right = 187.415
margin_bottom = 111.736
text = "Validate"

[connection signal="item_rmb_selected" from="Tree" to="." method="_on_Tree_item_rmb_selected"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="text_entered" from="WindowDialog/LineEdit" to="." method="_on_text_entered"]
[connection signal="pressed" from="WindowDialog/Button" to="." method="_on_WindowDialog_Button_pressed"]
